--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,4 @@ jobs:
     needs: [check-release]
     uses: ./.github/workflows/build_bison.yaml
     with:
-      release: ${{ needs.check-release.outputs.latest-release }}
+      release: 3.0.5
