--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y curl jq
           
-          BISON_LATEST=$(curl -s https://pypi.org/pypi/bison/json | jq -r '.info.version')
+          BISON_LATEST=$(curl -s https://ftp.gnu.org/gnu/bison/ | grep -o '[0-9]\.[0-9]\.[0-9]' | sort -V | tail -n 1)
           echo '::set-output name=LATEST_RELEASE::'$BISON_LATEST
           echo "Latest bison version: $BISON_LATEST"
 
@@ -34,4 +34,4 @@ jobs:
     needs: [check-release]
     uses: ./.github/workflows/build_bison.yaml
     with:
-      release: 3.0.5
+      release: ${{ needs.check-release.outputs.latest-release }}
