--- a/.github/workflows/build_bison.yaml
+++ b/.github/workflows/build_bison.yaml
@@ -31,20 +31,45 @@ jobs:
       
           run: |   
             apt-get update -y
-            apt-get install -y build-essential autoconf libtool pkg-config git software-properties-common curl 
+            apt-get install -y build-essential autoconf libtool pkg-config git software-properties-common curl wget 
             add-apt-repository ppa:deadsnakes/ppa -y
             apt-get install python3.9 python3-pip python3-dev libpython3.9-dev -y
             
-            #Building bison
+            #Downloading bison latest package and Installing dependencies
             echo "Building grpc ${{ inputs.release }}"
             python3.9 -m pip install --upgrade pip
             python3.9 -m pip install -U wheel setuptools
-            python3.9 -m pip install bison==${{ inputs.release }}
-            pip download bison -d wheels
-            pip download bison -d wheels
+            wget https://ftp.gnu.org/gnu/bison/bison-${{ inputs.release }}.tar.gz
+            tar -xzvf bison-3.8.2.tar.gz
+            cd bison-3.8.2
+            mkdir build_bison
+            cd build_bison
+            ../configure --prefix=$(pwd)
+            make && make install
+            cd ..
             
-            WHEEL_PATH=$(find / -name "bison-*.whl")
-            WHEEL_NAME=$(basename $(find / -name "bison-*.whl"))
+            #creating setup.py for creating wheel for bison
+            cat << EOF > setup.py
+            from setuptools import setup
+            
+            setup(
+                name='bison',
+                version='3.8.2',
+                description='The GNU Parser Generator',
+                author='GNU Project',
+                author_email='bug-bison@gnu.org',
+                url='https://www.gnu.org/software/bison/',
+                packages=['build_bison'],
+                install_requires=[],
+            )
+            EOF
+            
+            #creating wheel for bison latest version
+            python3.9 setup.py bdist_wheel
+  
+            
+            WHEEL_PATH=$(find / -name "bison-${{ inputs.release }}*.whl")
+            WHEEL_NAME=$(basename $(find / -name "bison-${{ inputs.release }}*.whl"))
             echo $WHEEL_PATH
             echo $WHEEL_NAME
             cp $WHEEL_PATH /artifacts/$WHEEL_NAME
