--- a/.github/workflows/build_bison.yaml
+++ b/.github/workflows/build_bison.yaml
@@ -30,39 +30,38 @@ jobs:
             
       
           run: |   
-            apt-get update -y
-            apt-get install -y build-essential autoconf libtool pkg-config git software-properties-common curl wget 
-            add-apt-repository ppa:deadsnakes/ppa -y
-            apt-get install python3.9 python3-pip python3-dev libpython3.9-dev -y
+           apt-get update -y
+           apt-get install -y build-essential autoconf libtool pkg-config git software-properties-common curl wget 
+           add-apt-repository ppa:deadsnakes/ppa -y
+           apt-get install python3.9 python3-pip python3-dev libpython3.9-dev -y
             
-            #Downloading bison latest package and Installing dependencies
-            #bison --version
-            echo "Building grpc ${{ inputs.release }}"
-            python3.9 -m pip install --upgrade pip
-            python3.9 -m pip install -U wheel setuptools
-            wget https://ftp.gnu.org/gnu/bison/bison-${{ inputs.release }}.tar.gz
-            tar -xzvf bison-3.8.2.tar.gz
-            cd bison-3.8.2
-            mkdir build_bison
-            cd build_bison
-            ../configure --prefix=$(pwd)
-            make && make install
-            cd ..
+           #Downloading bison latest package and Installing dependencies
+           #bison --version
+           echo "Building grpc ${{ inputs.release }}"
+           python3.9 -m pip install --upgrade pip
+           python3.9 -m pip install -U wheel setuptools
+           wget https://ftp.gnu.org/gnu/bison/bison-${{ inputs.release }}.tar.gz
+           tar -xzvf bison-3.8.2.tar.gz
+           cd bison-3.8.2
+           PATH=$PATH:/usr/local/m4/bin/
+           ./configure --prefix=/usr/local/bison
+           make
+           make install
             
-            #creating setup.py for creating wheel for bison
-            echo -e "\nfrom setuptools import setup\nsetup(\n  name='bison',\n  version='3.8',\n  description='The GNU Parser Generator',\n  author='GNU Project',\n  url='https://www.gnu.org/software/bison/',\n  packages=['build_bison'],\n  install_requires=[],\n)" >> setup.py
-            cat setup.py
+           #creating setup.py for creating wheel for bison
+           echo -e "\nfrom setuptools import setup\nsetup(\n  name='bison',\n  version='3.8',\n  description='The GNU Parser Generator',\n  author='GNU Project',\n  url='https://www.gnu.org/software/bison/',\n  packages=['/usr/local/bison'],\n  install_requires=[],\n)" >> setup.py
+           cat setup.py
             
-            #creating wheel for bison latest version
-            python3.9 setup.py bdist_wheel
+           #creating wheel for bison latest version
+           python3.9 setup.py bdist_wheel
   
             
-            WHEEL_PATH=$(find / -name "bison-${{ inputs.release }}*.whl")
-            WHEEL_NAME=$(basename $(find / -name "bison-${{ inputs.release }}*.whl"))
-            echo $WHEEL_PATH
-            echo $WHEEL_NAME
-            cp $WHEEL_PATH /artifacts/$WHEEL_NAME
-            ls /artifacts/
+           WHEEL_PATH=$(find / -name "bison-${{ inputs.release }}*.whl")
+           WHEEL_NAME=$(basename $(find / -name "bison-${{ inputs.release }}*.whl"))
+           echo $WHEEL_PATH
+           echo $WHEEL_NAME
+           cp $WHEEL_PATH /artifacts/$WHEEL_NAME
+           ls /artifacts/
             
             
       - name: Create Release
