--- a/.github/workflows/build_bison.yaml
+++ b/.github/workflows/build_bison.yaml
@@ -54,10 +54,14 @@ jobs:
             
            #creating wheel for bison latest version
            python3.9 setup.py bdist_wheel
+           pwd
+           ls
+           PATH=$(find / -name "bison*.whl")
+           echo $PATH
   
             
-           WHEEL_PATH=$(find /bison-${{ inputs.release }}/dist/ -name "bison-${{ inputs.release }}*.whl")
-           WHEEL_NAME=$(basename $(find /bison-${{ inputs.release }}/dist/ -name "bison-${{ inputs.release }}*.whl"))
+           WHEEL_PATH=$(PATH)
+           WHEEL_NAME=$(basename $(PATH))
            echo $WHEEL_PATH
            echo $WHEEL_NAME
            cp $WHEEL_PATH /artifacts/$WHEEL_NAME
