--- a/.github/workflows/build_bison.yaml
+++ b/.github/workflows/build_bison.yaml
@@ -56,9 +56,9 @@ jobs:
            python3.9 setup.py bdist_wheel
   
             
-           WHEEL_PATH=$(find / -name "bison*.whl")
+           export WHEEL_PATH=$(find / -name "bison*.whl")
            echo $WHEEL_PATH
-           WHEEL_NAME=$(basename $(find / -name "bison*.whl"))
+           export WHEEL_NAME=$(basename $(find / -name "bison*.whl"))
            echo $WHEEL_NAME
            cp $WHEEL_PATH /artifacts/$WHEEL_NAME
            ls /artifacts/
