test_docker_info

--- a/.github/workflows/demo_qemu_buildx.yml
+++ b/.github/workflows/demo_qemu_buildx.yml
@@ -19,3 +19,10 @@ jobs:
       - name: Supported arhitectures by Docker to build 
         run: |
           docker buildx ls
+
+      - name: Setup QEMU
+        uses: actions/setup-qemu-action@v2
+
+      - name: Now Supported architectures by Docker to build
+        run: |
+          docker buildx ls
