--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Run script
-        env:
-          USERNAME: ${{ secrets.MY_USERNAME }}
-          PASSWORD: ${{ secrets.MY_PASSWORD }}
-        run: |
-          python test.py
-
+      - name: Docker Login
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.MY_USERNAME }}
+          password: ${{ secrets.MY_PASSWORD }}
+      
+      - name: Docker image exists
+        uses: cloudposse/github-action-docker-image-exists@0.1.1
+        with:
+          registry: registry.hub.docker.com
+          organization: quay.io/projectquay
+          repository: golang
+          tag: 1.20-test
