--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,10 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+          matrix:
+            version: [1.18, 1.19, 1.20, 1.20-test]
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,4 +25,4 @@ jobs:
           registry: quay.io
           organization: projectquay
           repository: golang
-          tag: 1.20-test
+          tag: ${{ matrix.versions }}
