--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           registry: quay.io
           organization: projectquay
           repository: golang
-          tag: ${{ matrix.versions }}
+          tag: ${{ matrix.version }}
