--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,22 @@
 version: 2.1
 
+parameters:
+  GHA_Event:
+    type: string
+    default: ""
+  GHA_Actor:
+    type: string
+    default: ""
+  GHA_Action:
+    type: string
+    default: ""
+  GHA_Meta:
+    type: string
+    default: ""
+
 workflows:
-  test-deploy:
+  test:
+    when: << pipeline.parameters.GHA_Action >>
     jobs:
       - test
 
