--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,13 @@
 version: 2.1
 
-parameters:
-  GHA_Event:
-    type: string
-    default: ""
-  GHA_Actor:
-    type: string
-    default: ""
-  GHA_Action:
-    type: string
-    default: ""
-  GHA_Meta:
-    type: string
-    default: ""
-
 workflows:
+  version: 2
   test:
-    when: << pipeline.parameters.GHA_Action >>
     jobs:
-      - test
+      - test:
+          filters:
+            branches:
+              ignore: /.*/
 
 jobs:
   test:
