--- a/.github/workflows/circleci.yml
+++ b/.github/workflows/circleci.yml
@@ -8,8 +8,6 @@ jobs:
     
     steps:
       - name: Trigger CircleCI Pipeline
-        uses: circleci/trigger-circleci-pipeline@v1.0
-        with:
-          project: nothing
-          branch: ${{ github.ref }}
-          token: ${{ secrets.CCI_TOKEN }}
+        uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.1.0
+        env:
+          CCI_TOKEN: ${{ secrets.CCI_TOKEN }}
