--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ parameters:
     default: ""
 
 workflows:
-  version: 2
   test:
+    # This workflow is set to be conditionally triggered, only when
+    # the GitHub Action is triggered.
+    # With no other workflows, normal push events will be ignored currently.
+    when: << pipeline.parameters.GHA_Action >>
     jobs:
-      - test:
-          filters:
-            branches:
-              ignore: /.*/
+      - test
 
 jobs:
   test:
