--- a/.github/workflows/simple_example.yaml
+++ b/.github/workflows/simple_example.yaml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   Display:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
       - name: Display Message
