--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -11,11 +11,11 @@ jobs:
         run: |
           echo "Hello, World!"
 
-      - name: executing remote ssh commands using ssh key
-        uses: appleboy/ssh-action@v0.1.10
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: whoami
+          script: ls && whoami
       
