--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -10,12 +10,13 @@ jobs:
       - name: Display Message
         run: |
           echo "Hello, World!"
+          ssh-keygen
+          ssh-copy-id root@${{ secrets.SSH_HOST }}
 
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: ls && whoami
-      
+#       - name: executing remote ssh commands using password
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ${{ secrets.SSH_HOST }}
+#           username: ${{ secrets.SSH_USER }}
+#           key: ${{ secrets.SSH_KEY }}
+#           script: ls && whoami
