--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Display Message
         run: |
           echo "Hello, World!"
-          ssh-keygen -t rsa -N '' -f ~/.ssh/id_rsa 
-          ssh-copy-id root@${{ secrets.SSH_HOST }}
+          ssh-keygen -R -t rsa -N '' -f ~/.ssh/id_rsa 
+          ssh-copy-id root@${{ secrets.SSH_HOST }} 
 
 #       - name: executing remote ssh commands using password
 #         uses: appleboy/ssh-action@master
