--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -10,13 +10,10 @@ jobs:
       - name: Display Message
         run: |
           echo "Hello, World!"
-          ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }}
-          ls
 
-#       - name: executing remote ssh commands using password
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.SSH_HOST }}
-#           username: ${{ secrets.SSH_USER }}
-#           key: ${{ secrets.SSH_KEY }}
-#           script: ls && whoami
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          script: ls && whoami
