--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -3,9 +3,12 @@ name: APPLEBOY
 on: workflow_dispatch
 
 jobs:
-  Display:
-    runs-on: ubuntu-latest
     
+  Display:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ 'ubuntu-latest' , 'self-hosted' ]
     steps:
       - name: Display Message
         run: |
@@ -16,4 +19,5 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: ls && whoami
