--- a/.github/workflows/appleboy.yml
+++ b/.github/workflows/appleboy.yml
@@ -20,4 +20,6 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: ls && whoami
+          script: |
+            git 
+            
