--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: 'ubuntu-latest'
 
     steps:
     - uses: actions/checkout@v2
@@ -12,3 +12,4 @@ jobs:
     - name: Run a script
       run: |
         echo "Hello, World!"
+        docker buildx ls
